<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.koyeresolutions.ksexpire.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        
        <action
            android:id="@+id/action_dashboard_to_search"
            app:destination="@id/navigation_search"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToSaveState="true"
            app:restoreState="true" />
            
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.koyeresolutions.ksexpire.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search">
        
        <!-- Argument para recibir filtro desde Dashboard -->
        <argument
            android:name="filter_type"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.koyeresolutions.ksexpire.ui.about.AboutFragment"
        android:label="@string/nav_about"
        tools:layout="@layout/fragment_about" />

</navigation>